👌 fix: Hide overflow image when it is larger

--- a/app/src/presentation/components/news/NewsLine.module.css
+++ b/app/src/presentation/components/news/NewsLine.module.css
@@ -9,6 +9,7 @@
     text-align: start;
     text-transform: none;
     min-height: 100px;
+    overflow: hidden;
 }
 
 .content {
